--- a/alunos/CodigoAlunos/horario.css
+++ b/alunos/CodigoAlunos/horario.css
@@ -12,7 +12,7 @@
   color: white;
 }
 
-.back-btn {
+.back-button {
   background: none;
   border: none;
   color: white;
@@ -21,6 +21,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 8px;
+  width: 8px;
 }
 
 .school-info {
@@ -129,6 +131,13 @@
 
 .intervalo-row {
   background-color: #003366;
+}
+
+.time-intervalo {
+  font-weight: 600;
+  color: #ffffff;
+  text-align: left !important;
+  font-size: 14px;
 }
 
 .intervalo-cell {
