--- a/alunos/CodigoAlunos/horario.css
+++ b/alunos/CodigoAlunos/horario.css
@@ -12,6 +12,17 @@
   color: white;
 }
 
+.subject-blue {
+    background-color: #8ED6D7;
+    color: #ffffff;
+}
+
+.subject-darkblue {
+    background-color:  #ffffff;
+    color: #000000;
+}
+
+
 .back-button {
   background: none;
   border: none;
@@ -145,7 +156,7 @@
 
 .time-cell {
   font-weight: 600;
-  color: #333;
+  color: #39c2c4;
   font-size: 15px;
 }
 
