sabrina: implantação dos dashboards de secretaria, coordenação e professor e tentativa de resolução de problemas

--- a/escola/templates/escola/index.html
+++ b/escola/templates/escola/index.html
@@ -7,7 +7,7 @@
     <title>NEXUS</title>
     <link rel="shortcut icon" href="{% static 'escola/img/icon nexus.png' %}">
     <meta name="description" content="Sistema completo de gestão escolar">
-    <link rel="stylesheet" href="{% static 'escola/css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'escola/css/style.css' %}">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 <body>
